--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "license": "private",
   "devDependencies": {
-    "autoprefixer": "^10.4.7",
+    "autoprefixer": "^10.4.17",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
     "css-loader": "^6.2.0",
     "css-minimizer-webpack-plugin": "^5.0.0",
@@ -27,10 +27,10 @@
     "extra-watch-webpack-plugin": "^1.0.3",
     "file-loader": "^6.2.0",
     "mini-css-extract-plugin": "^2.1.0",
-    "postcss": "^8.1.7",
+    "postcss": "^8.4.33",
     "postcss-cli": "^10.0.0",
     "postcss-import": "^15.0.0",
-    "postcss-loader": "^7.0.1",
+    "postcss-loader": "^7.3.4",
     "postcss-nesting": "^11.2.2",
     "sass": "^1.32.7",
     "sass-loader": "^13.1.0",
@@ -40,5 +40,9 @@
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.7.2",
     "webpack-notifier": "^1.15.0"
+  },
+  "dependencies": {
+    "dotenv": "^16.4.1",
+    "postcss-preset-env": "^9.3.0"
   }
 }
